--- a/css/custom.css
+++ b/css/custom.css
@@ -5,7 +5,7 @@ body, html {
 
 .bg { 
     /* The image used */
-    background-image: url("../img/image.jpg");
+    background-image: url("../img/image.gif");
 
     /* Full height */
     height: 100%; 
@@ -25,6 +25,7 @@ body, html {
 	color: #e9e9e9;
 	padding: 2px;
 	width: 250px;
+	opacity: 0.9;
 }
 
 #welcomeB {
@@ -35,6 +36,7 @@ body, html {
 	color: #e9e9e9;
 	padding: 2px;
 	width: 180px;
+	opacity: 0.9;
 }
 
 #left_image {
@@ -53,11 +55,26 @@ body, html {
 	margin-bottom: 10%;
 }
 
+.footer-week {
+	color: gray !important;
+}
+
+.footer-week:hover {
+	color: black !important;
+}
+
+#github {
+	color: gray !important;
+}
+
+#github:hover {
+	color: black !important;
+}
 
 footer {
 	display: block;
 	width: 100% !important;
-	box-shadow: 5px 0px 8px #888888;
+	border-top: #eeeeee 1px solid;
 	padding-bottom: 10px;
 }
 
